--- a/src/assets/styles/iconfont.css
+++ b/src/assets/styles/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
-  font-family: "iconfont"; /* Project id 1857701 */
-  src: url('fonts/iconfont.woff2?t=1628343109721') format('woff2'),
-       url('fonts/iconfont.woff?t=1628343109721') format('woff'),
-       url('fonts/iconfont.ttf?t=1628343109721') format('truetype');
+  font-family: "iconfont"; /* Project id 2745600 */
+  src: url('./fonts/iconfont.woff2?t=1630995364307') format('woff2'),
+       url('./fonts/iconfont.woff?t=1630995364307') format('woff'),
+       url('./fonts/iconfont.ttf?t=1630995364307') format('truetype');
 }
 
 .iconfont {
@@ -13,99 +13,67 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-user1:before {
-  content: "\e636";
-}
-
 .icon-star:before {
-  content: "\e671";
+  content: "\e732";
 }
 
-.icon-left:before {
-  content: "\e610";
+.icon-info:before {
+  content: "\eba6";
 }
 
-.icon-jihe:before {
-  content: "\e6a5";
+.icon-money:before {
+  content: "\e600";
 }
 
-.icon-shoucang:before {
-  content: "\e7a7";
+.icon-jihua:before {
+  content: "\e601";
 }
 
-.icon-guanbi:before {
-  content: "\e6c9";
+.icon-weizhi:before {
+  content: "\e602";
 }
 
-.icon-liebiao:before {
-  content: "\e61e";
-}
-
-.icon-emizhongzi:before {
-  content: "\e64a";
-}
-
-.icon-sheji:before {
-  content: "\e65e";
-}
-
-.icon-zan:before {
-  content: "\e839";
-}
-
-.icon-dc-icon-zhongzidujiaoshou:before {
-  content: "\e626";
-}
-
-.icon-yinle:before {
-  content: "\e630";
-}
-
-.icon-search:before {
-  content: "\e616";
-}
-
-.icon-case:before {
+.icon-service:before {
   content: "\e603";
 }
 
-.icon-about:before {
+.icon-hotel:before {
+  content: "\e6bc";
+}
+
+.icon-down:before {
+  content: "\e6cc";
+}
+
+.icon-back:before {
+  content: "\e660";
+}
+
+.icon-name:before {
+  content: "\e6b4";
+}
+
+.icon-ktv:before {
   content: "\e604";
 }
 
-.icon-home:before {
+.icon-jingdian:before {
   content: "\e605";
 }
 
-.icon-user:before {
-  content: "\e607";
-}
-
-.icon-zhuanjia:before {
-  content: "\e63b";
-}
-
-.icon-tikuguanli:before {
-  content: "\e60d";
-}
-
-.icon-cuowu:before {
+.icon-meishi:before {
   content: "\e606";
 }
 
-.icon-ic_account_line:before {
-  content: "\e609";
+.icon-anmo:before {
+  content: "\e63b";
 }
 
-.icon-ic_camera_line:before {
-  content: "\e60c";
+.icon-riqidianji:before {
+  content: "\e607";
 }
 
-.icon-lanya:before {
-  content: "\e627";
-}
-
-.icon-lanya1:before {
-  content: "\e642";
+.icon-jiantou9:before {
+  content: "\e60b";
 }
 
